# Battleship

./: README.md
Battleship/Battleship/: Battleship.pde  Box.pde  Genome.pde  Node.pde  Plan.pde  Player.pde  Population.pde  RandomPlayer.pde  Ship.pde
Battleship/C++/: CMakeLists.txt
Battleship/C++/src/: evenPlayer.cpp  geometry.cpp  geometry.hpp  heatMapPlayer.cpp  humanLikePlayer.cpp  main.cpp  mcts.h  plan.cpp  plan.hpp  randomPlayer.cpp
